# ai-tools-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  registry.rs  skills.rs  sync.rs  tools.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.tsx  JsonEditor.tsx  Layout.tsx  ServerForm.tsx  ServerList.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillForm.tsx  SkillList.tsx  SyncPanel.tsx  Toast.tsx  ToolList.tsx
src/hooks/: useSettings.tsx  useTauri.ts  useUpdateChecker.ts
src/i18n/: en.ts  index.ts  zh.ts
src/styles/: globals.css
