[package]
name = "atm-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "atm_tauri_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "atm-tauri"
path = "src/main.rs"

[dependencies]
atm-core = { path = "../crates/core" }
tauri = { version = ">=2,<2.11", features = [] }
tauri-build = { version = ">=2,<2.11", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = ">=2,<2.11", features = [] }
